--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -227,6 +227,7 @@ border-bottom: solid 1px var(--border-light);
 }
 
 .topsign-title {
+    box-sizing: border-box;
 padding: 15px;
     width: 100%;
     height:auto;
@@ -600,6 +601,7 @@ width:20px;
 }
 
 [data-theme="dark"] .topsign-title {
+    box-sizing: border-box;
 padding: 15px;
     width: 100%;
     height:auto;
