--- a/src/styles/sign.css
+++ b/src/styles/sign.css
@@ -1,4 +1,5 @@
 .sign-container {
+    box-sizing: border-box;
     width: 100%;
     max-width: 1090px;
     margin: 20px auto;
@@ -76,6 +77,7 @@
 }
 @media screen and (max-width: 1200px){
     .sign-container {
+    box-sizing: border-box;
         width: 98%;
         margin: 6px 1%;
         font-size: 14px;
